# text-book-AI-humanoid-GEMINI

./: .gitignore  .vercelignore  DEPLOYMENT.md  GEMINI.md  INTEGRATION.md  PRODUCTION_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  render.yaml  start-dev.bat  start-dev.sh  vercel.json
.claude/commands/: gen-chapter.md  gen-tests.md  ingest-content.md
.gemini/commands/: sp.reverse-engineer.toml
.github/workflows/: deploy-frontend.yml  deploy.yml  test-backend.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  crud_messages.py  crud_vectors.py  database.py  embeddings.py  ingest_textbook.py  init_db.py  init_qdrant.py  main.py  models.py  pyproject.toml  rag_service.py  requirements-prod.txt  requirements.txt  vector_store.py
backend/scripts/: ingest_textbook.py  init_qdrant.py
backend/src/: main.py
backend/src/api/: auth_middleware.py  chat.py  health.py  users.py
backend/src/db/: crud_messages.py  crud_users.py  crud_vectors.py  database.py  init_db.py
backend/src/models/: __init__.py  message.py  models.py  user.py
backend/src/schemas/: chat.py  content.py  user.py
backend/src/services/: embeddings.py  rag.py  vector_store.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_rag.py  test_users.py
frontend/: docusaurus.config.ts  package-lock.json  package.json  playwright.config.ts  sidebars.ts
frontend/docs/: intro.md
frontend/e2e/: actions.spec.ts  auth.spec.ts  chat.spec.ts  homepage.spec.ts
scripts/: generate_chapter.py
specs/mvp/: plan.md  (+2 more)
(+85 files in other folders)
